--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.10.4",
     "next": "12.1.6",
     "react": "18.2.0",
