--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emailjs-com": "^3.2.0",
     "gsap": "^3.10.4",
     "next": "12.1.6",
+    "particles.js": "^2.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.4",
